<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.fitbit.sampleandroidoauth2.Home.HMLoginActivityHome">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textSize="30sp"
                android:visibility="visible"
                android:text="@string/app_name"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:id="@+id/relative_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <com.hanks.library.AnimateCheckBox
                    android:id="@+id/checkbox_remember"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="3dp"
                    app:animDuration="200"
                    app:checkedColor="@color/colorAccent"
                    app:lineColor="#fff"
                    app:unCheckColor="#5b5b59" />

                <TextView
                    android:id="@+id/textview_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/checkbox_remember"
                    android:layout_toRightOf="@id/checkbox_remember"
                    android:text="@string/remember_me" />
            </RelativeLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:onClick="btnSUClick"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
