<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:background="@color/background"
              android:orientation="vertical"
              tools:context="com.fitbit.sampleandroidoauth2.Home.HMManualAddFood">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_food"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/toolbar_title" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:background="@drawable/bg_parent_rounded_corner"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_addFoodName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_parent_rounded_corner"
            android:hint="@string/food"
            android:inputType="textPersonName"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/ed_addCal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/calories"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_parent_rounded_corner"
            android:inputType="number"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="99dp"/>

        <Button
            android:id="@+id/btn_ManuallyAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>


</LinearLayout>
