<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_main"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background"
              tools:context="com.fitbit.sampleandroidoauth2.Home.HMMainActivityHome">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_amp_add_food"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/toolbar_title" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/edt_searchFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_parent_rounded_corner"
            android:ems="10"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/enter_food_name"
            android:inputType="textPersonName"
            android:padding="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calorie"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_below="@+id/textView8">

                <EditText
                    android:id="@+id/edt_fromCalories"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:ems="10"
                    android:background="@drawable/bg_parent_rounded_corner"
                    android:hint="@string/from"
                    android:layout_margin="5dp"
                    android:inputType="textPersonName" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:inputType="textPersonName"
                    android:background="@drawable/bg_parent_rounded_corner"
                    android:ems="10"
                    android:hint="@string/to"
                    android:padding="10dp"
                    android:layout_margin="5dp"
                    android:id="@+id/edt_toCalories"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_action_arrow_right"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/progressBar_home"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <!--<TextView-->
            <!--android:id="@+id/emptyView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/no_food_selected"-->
            <!--android:visibility="invisible"/>-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_fitbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:visibility="gone"
            app:srcCompat="@drawable/fitbit_logo"/>

    </RelativeLayout>
</LinearLayout>
